--- a/overview.html
+++ b/overview.html
@@ -68,7 +68,7 @@
                 <li><a target="_blank" href="vue/color-picker/index.html">選色器</a></li>
             </ul>
         </div>
-        <div>
+        <div class="type">
             <h2>自學作業</h2>
             <ul class="works">
                 <li><a target="_blank" href="https://codepen.io/ej131525/collections/">CodePen</a></li>
